minor update to  README.adoc

--- a/src/main/resources/archetype-resources/spring-cloud-starter-stream-__appType__-__rootArtifactId__/README.adoc
+++ b/src/main/resources/archetype-resources/spring-cloud-starter-stream-__appType__-__rootArtifactId__/README.adoc
@@ -37,11 +37,11 @@ $ ./mvnw clean package
 
 ```
 
-java -jar ${rootArtifactId}-${appType}-kafka.jar
+java -jar ${rootArtifactId}-${appType}-kafka-${version}.jar
 
 or
 
-java -jar ${rootArtifactId}-${appType}-rabbit.jar
+java -jar ${rootArtifactId}-${appType}-rabbit-${version}.jar
 
 ```
 
